--- a/templates/shop/includes/product_list_square_style.html
+++ b/templates/shop/includes/product_list_square_style.html
@@ -37,7 +37,7 @@
                                 {% endif %}
                             </div>
                         </div>
-                    {% endwith %}
+                    </div>
                   {% endwith %}
                 {% endfor %}
             </div>
