--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -47,17 +47,14 @@
             {% endif %}
         </p>
         {% for result in results.object_list %}
+            {{ result|classname }}
             {% if result|classname == 'Event' %}
                 {% with result as event %}
                     {% include 'agenda/includes/event_search.html' %}
                 {% endwith %}
-            {% elif result|classname == 'Audio' %}
-                {% with result as audio %}
-                    {% include 'media/audio/inc/audio_search.html' %}
-                {% endwith %}
-            {% elif result|classname == 'Video' %}
-                {% with result as video %}
-                    {% include 'media/video/inc/video_search.html' %}
+            {% elif result|classname == 'Playlist' %}
+                {% with result as playlist %}
+                    {% include 'media/inc/playlist_search.html' %}
                 {% endwith %}
             {% else %}
                 {% with result as page %}
