--- a/templates/core/inc/related_content.html
+++ b/templates/core/inc/related_content.html
@@ -10,15 +10,21 @@
             </div>
             <div class="row tac">
                 {% for content in dynamic_content %}
-                    {% if content.content_model == "article" %}
-                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-                            {% include 'magazine/article/includes/article_card.html' %}
-                        </div>
-                    {% else %}
                     <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-                        {% include "core/inc/generic_card.html" %}
+                        {% if content.content_type.model == "article" %}
+                            {% with content.content_object as article %}
+                                {% include "magazine/article/includes/article_card.html" %}
+                            {% endwith %}
+                        {% elif content.content_type.model == "event" %}
+                            {% with content.content_object as event %}
+                                {% include "agenda/includes/event_card.html" %}
+                            {% endwith %}
+                        {% elif content.content_type.model == "custompage" %}
+                            {% with content.content_object as page %}
+                                {% include "pages/includes/page_card.html" %}
+                            {% endwith %}
+                        {% endif %}
                     </div>
-                    {%endif%}
                 {% endfor %}
             </div>
         </div>
