--- a/templates/home/inc/body.html
+++ b/templates/home/inc/body.html
@@ -4,8 +4,14 @@
             <div class="col-xs-4">
                 {% if content.content_type.model == "brief" %}
                     {% include "magazine/brief/inc/brief_card.html" %}
-                {% else %}
-                    {% include "core/inc/generic_card.html" %}
+                {% elif content.content_type.model == "article" %}
+                    {% with content.content_object as article %}
+                        {% include "magazine/article/includes/article_card.html" %}
+                    {% endwith %}
+                {% elif content.content_type.model == "event" %}
+                    {% with content.content_object as event %}
+                        {% include "agenda/includes/event_card.html" %}
+                    {% endwith %}
                 {% endif %}
             </div>
         {% endfor %}
