--- a/templates/magazine/topic/topic_detail.html
+++ b/templates/magazine/topic/topic_detail.html
@@ -63,7 +63,7 @@
         <div class="row">
             {% for article in articles %}
                 <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-                    {% include 'core/inc/generic_card.html' %}
+                    {% include 'magazine/article/includes/article_card.html' %}
                 </div>
             {% endfor %}
         </div>
