--- a/templates/pages/custompage.html
+++ b/templates/pages/custompage.html
@@ -43,7 +43,7 @@
             <div class="page__childrens">
                 {% for object in childrens %}
                     {% if object.in_menus.0 %}
-                      {% include "pages/includes/page_card.html" %}
+                      {% include "pages/includes/page_box.html" %}
                     {% endif %}
                 {% endfor %}
             </div>
