--- a/templates/pages/teampage.html
+++ b/templates/pages/teampage.html
@@ -43,7 +43,7 @@
             <div class="page__childrens">
                 {% for children in childrens %}
                     {% with children as object %}
-                        {% include "pages/includes/page_card.html" %}
+                        {% include "pages/includes/page_box.html" %}
                     {% endwith %}
                 {% endfor %}
             </div>
