--- a/templates/agenda/includes/event_card.html
+++ b/templates/agenda/includes/event_card.html
@@ -17,7 +17,7 @@
     <figure class="article-box__image">
         {% with event.images.all|get_type:'card' as images %}
             {% if images %}
-                <img src="{{ MEDIA_URL }}{% thumbnail images.0.file 427 286 top=0.5 left=article.photo_alignment|get_photo_alignment %}" data-src="{{ MEDIA_URL }}{% thumbnail images.0.file 427 286 %}" class="lazyload" />
+                <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-original="{{ MEDIA_URL }}{% thumbnail images.0.file 427 286 top=0.5 left=article.photo_alignment|get_photo_alignment %}" class="lazyload" />
             {% endif %}
         {% endwith %}
     </figure>
