--- a/templates/home/inc/services.html
+++ b/templates/home/inc/services.html
@@ -6,7 +6,7 @@
 
         <div class="col-sm-6">
 
-            <a class="banner banner--light" href="#" style="background-image:url({% static 'img/services/tours.jpg' %});">
+            <a class="banner banner--light" href="{% url 'event_list_tag' 'tournees' %}" style="background-image:url({% static 'img/services/tours.jpg' %});">
 
                 <div class="banner__content">
 
